--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
